# QuantiMol

./: .gitignore  LICENSE  README.md  conda_packages.txt  pip_requirements.txt  pyproject.toml
Data Collection and Model Development/: DL_ModelDevelopment.ipynb  DataCollectionAndPreparation.ipynb  DataCollectionAndPreperation.ipynb  EGFR_Data_Preprocessed.csv  EGFR_Data_TestFile.csv  EGFR_Feature_Extraction.csv  FeatureExtraction.ipynb  GBM_ModelDevelopment.ipynb  ModelDevelopment.ipynb  TestFileGeneration.ipynb
Data Collection and Model Development/.ipynb_checkpoints/: ModelDevelopment-checkpoint.ipynb
Data Collection and Model Development/MLModels/: fpv_desc2d_dict.yml  lgb_92_model.pkl
Main Files/: DataOperations.py  InputFrame.py  Interface.py  Interface.spec  OutputFrame.py  TableFrame.py  hook -xgboost.py
Main Files/Hooks/: hook-molfeat.py
Main Files/MLModels/: XGBClassifierEGFR.joblib
notebooks/: collection.ipynb  development.ipynb  extraction.ipynb  test.ipynb
scripts/: desc_calc.py  descriptors.py  main.py  model_dev.py  pipeline.py
src/: DataOperations.py  InputFrame.py  Interface.py  OutputFrame.py  TableFrame.py  inputframe.py  interface.py  main.py  outputframe.py  tableframe.py
src/frames/: inputframe.py  outputframe.py  tableframe.py
src/hooks/: hook-lightgbm.py
src/models/: model.pkl
